data/derived/sp14/progs/unify/prog3452.ml.out
Characters 95-114:
  | Average (a1,a2) -> buildAverage(a1,a2);;
                       ^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         float
